--- a/BodyBuilder.Infrastructure/BodyBuilder.Infrastructure.csproj
+++ b/BodyBuilder.Infrastructure/BodyBuilder.Infrastructure.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\BodyBuilder.Domain\BodyBuilder.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
