--- a/BodyBuilderApp/Properties/launchSettings.json
+++ b/BodyBuilderApp/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5166",
+      "applicationUrl": "http://192.168.1.93:5166",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
