--- a/BodyBuilderApp/appsettings.json
+++ b/BodyBuilderApp/appsettings.json
@@ -8,7 +8,8 @@
   },
   "ConnectionStrings": {
     "localDb": "Server=localhost;Database=bbdatabase;Integrated Security=True;TrustServerCertificate=True;",
-    "remoteDb": "Server=77.245.159.8;Database=gymguru1_;Encrypt=false;TrustServerCertificate=False;User Id=gymguru;Password=#k16xN67y;"
+    "remoteDb": "Server=77.245.159.8;Database=gymguru1_;Encrypt=false;TrustServerCertificate=False;User Id=gymguru;Password=#k16xN67y;",
+    "redis": "container_redis:6380"
   },
   "Logging": {
     "LogLevel": {
