--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -5,6 +5,7 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=http://+:80
+      - REDIS_CONNECTION=redisService:6379
     ports:
       - "8080:80"
     volumes:
