--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,11 +6,17 @@ services:
     build:
       context: .
       dockerfile: BodyBuilderApp/Dockerfile
-   
-  redisService:
-     image: redis
-     container_name: redis_container
-     ports:
-        - "6379:6379"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:80
+    ports:
+      - "8080:80"
+    volumes:
+      - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
+      - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
 
-  
+  redisService:
+    image: redis
+    container_name: redis_container
+    ports:
+      - "6379:6379"
