--- a/BodyBuilderApp/appsettings.json
+++ b/BodyBuilderApp/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "ConnectionStrings": {
+    "localDb": "Server=localhost;Database=bbdatabase;Integrated Security=True;TrustServerCertificate=True;",
+    "remoteDb": "Server=77.245.159.8;Database=gymguru1_;Encrypt=false;TrustServerCertificate=False;User Id=gymguru;Password=#k16xN67y;",
+    "redis": "container_redis:6380"
+  },
   "TokenOptions": {
     "AccessTokenExpiration": 5,
     "ExpireRefresh": "3",
