--- a/BodyBuilderApp/appsettings.json
+++ b/BodyBuilderApp/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "remoteDb": "Server=77.245.159.8;Database=gymguru1_;Encrypt=false;TrustServerCertificate=False;User Id=gymguru;Password=#k16xN67y;"
+
+  },
   "TokenOptions": {
     "AccessTokenExpiration": 5,
     "ExpireRefresh": "3",
