* Open telemetry implemented

--- a/BodyBuilderApp/appsettings.json
+++ b/BodyBuilderApp/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "OpenTelemetrySettings": {
+    "ServiceName": "BodyBuilderApp.API",
+    "ServiceVersion": "1.0.0",
+    "ActivitySourceName": "BodyBuilderApp"
+  },
   "ConnectionStrings": {
     "remoteDb": "Server=77.245.159.8;Database=gymguru1_;Encrypt=false;TrustServerCertificate=False;User Id=gymguru;Password=#k16xN67y;"
 
