--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,3 +20,11 @@ services:
     container_name: redis_container
     ports:
       - "6379:6379"
+  
+  jaeger:
+   image: jaegertracing/all-in-one:1.49
+   container_name: "jaeger_container"
+   ports:
+    - "4317:4317" #grpc
+    - "4318:4318" #http
+    - "16686:16686"  #ui
