* Logging to elasticsearch succeeded

--- a/BodyBuilderApp/appsettings.json
+++ b/BodyBuilderApp/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "ElasticSearchSettings": {
+    "BaseUrl": "http://localhost:9200",
+    "IndexName": "BodyBuiler.App",
+    "UserName": "elastic",
+    "Password": "DkIedPPSCb"
+  },
   "OpenTelemetrySettings": {
     "ServiceName": "BodyBuilderApp.API",
     "ServiceVersion": "1.0.0",
@@ -18,7 +24,7 @@
 
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Trace",
       "Microsoft.AspNetCore": "Warning"
     }
   },
