--- a/BodyBuilderApp/appsettings.json
+++ b/BodyBuilderApp/appsettings.json
@@ -1,4 +1,15 @@
 {
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information", // Varsayılan olarak sadece log seviyesi info olanları loglar
+      "Override": { //yukarıdaki ayarları ezer
+        "Microsoft.Hosting.Lifetime": "Information", 
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    }
+
+  },
   "ElasticSearchSettings": {
     "BaseUrl": "http://localhost:9200",
     "IndexName": "BodyBuiler.App",
