* Rabbit Mq implementasyonu tamamlandı

--- a/BodyBuilderApp/appsettings.json
+++ b/BodyBuilderApp/appsettings.json
@@ -1,9 +1,17 @@
 {
+  "RabbitMqSettings": {
+    "HostName": "localhost",
+    "Port": 5672,
+    "UserName": "guest",
+    "Password": "guest",
+    "ExchangeName": "user.events",
+    "QueueName": "user.registered"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information", // Varsayılan olarak sadece log seviyesi info olanları loglar
       "Override": { //yukarıdaki ayarları ezer
-        "Microsoft.Hosting.Lifetime": "Information", 
+        "Microsoft.Hosting.Lifetime": "Information",
         "Microsoft": "Warning",
         "System": "Warning"
       }
