* Redis implementasyonu yapıldı

--- a/BodyBuilderApp/appsettings.json
+++ b/BodyBuilderApp/appsettings.json
@@ -30,8 +30,8 @@
     "ActivitySourceName": "BodyBuilderApp"
   },
   "ConnectionStrings": {
-    "remoteDb": "Server=77.245.159.8;Database=gymguru1_;Encrypt=false;TrustServerCertificate=False;User Id=gymguru;Password=#k16xN67y;"
-
+    "remoteDb": "Server=77.245.159.8;Database=gymguru1_;Encrypt=false;TrustServerCertificate=False;User Id=gymguru;Password=#k16xN67y;",
+    "Redis": "172.19.165.27:6379,password=Redis123*"
   },
   "TokenOptions": {
     "AccessTokenExpiration": 1,
